<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/productName"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/productNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/productEnterName"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
       />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PriceText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/productPriceEditText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TagText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tagHint"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/productTagsEditText"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnSave"
        android:onClick="SaveObjectBtn"
        android:textAllCaps="false"
        />


</LinearLayout>